manifests/echoserver/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
    kubernetes.io/metadata.name: echoserver
  name: echoserver
spec:
  finalizers:
    - kubernetes
